[tool.poetry]
name = "certcost-pro-bot"
version = "0.1.0"
description = "Telegram-бот расчёта стоимости сертификации"
authors = ["CertCost Pro"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13"
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.30"
redis = "^5.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
loguru = "^0.7"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
